<resources>
    <string name="app_name">CRM_Alvarez_Diaz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_proveedores">Proveedores</string>
    <string name="menu_tareas">Tareas</string>
    <string name="menu_estadisticas">Estadísticas</string>
    <string name="clientes">Clientes</string>
    <string name="proveedores">Proveedores</string>
    <string name="tareas">Tareas</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="action_settings2">Acerca de...</string>
    <string name="iniciarsesion">INICIAR SESIÓN</string>
    <string name="user">Usuario: </string>
    <string name="pass">Contraseña: </string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="registryForm">FORMULARIO DE REGISTRO</string>
    <string name="email">Correo: </string>
    <string name="name">Nombre y Apellidos: </string>
    <string name="phone">Teléfono: </string>
    <string name="repeatPass">Repetir contraseña: </string>
    <string name="username">Nombre de usuario: </string>
    <string name="termsAndConditions">Acepto los términos y condiciones de CRM Álvarez Díaz</string>
    <string name="registry">REGISTRAR</string>
    <string name="introduceYourData">Introduce tus datos: </string>
    <string name="registryQuery">¿No tienes una cuenta de usuario?</string>
    <string name="registryHereButtom">Regístrate aquí</string>
    <string name="title_activity_registry">registry</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_registro">Registro</string>
    <string name="volver">Volver a Inicio</string>
    <string name="volverCliente">Volver atrás</string>
    <string name="nombre">Nombre: </string>
    <string name="apellido">Primer apellido: </string>
    <string name="npedidos">Número de pedidos: </string>
    <string name="add">Añadir contacto</string>
    <string name="empresa">Nombre de la empresa: </string>
    <string name="deuda">Deuda: </string>
    <string name="add_prov">Añadir Proveedor</string>
</resources>