<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/baseline_supervisor_account_black_18dp"
            android:title="@string/clientes" />
        <item
            android:id="@+id/nav_proveedores"
            android:icon="@drawable/baseline_apartment_black_18dp"
            android:title="@string/proveedores" />
        <item
            android:id="@+id/nav_tareas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/tareas" />
        <item
            android:id="@+id/nav_estadisticas"
            android:icon="@drawable/baseline_timeline_black_18dp"
            android:title="@string/estadisticas" />
    </group>
</menu>