<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="20sp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:text="@string/registryForm"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#6A6A6A"
        android:text="@string/introduceYourData"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:baselineAligned="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/name"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            android:textColor="#3E3E3E"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:baselineAligned="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/username"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@example"
            android:textColor="#3E3E3E"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:baselineAligned="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/phone"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            android:textColor="#3E3E3E"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:baselineAligned="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/email"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="#3E3E3E"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:baselineAligned="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/pass"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#3E3E3E"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:baselineAligned="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="top"
            android:text="@string/repeatPass"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center|start"
            android:inputType="textPassword"
            android:textColor="#3E3E3E"
            android:textStyle="italic" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CheckBox"
        tools:text="@string/termsAndConditions" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#75A6F6"
        android:text="@string/registry" />

</LinearLayout>