<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp"
    android:orientation="vertical"
    tools:context=".Registro">


    <Button
        android:id="@+id/btnVolverProveedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/volverCliente"
        app:icon="@drawable/abc_vector_test" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:baselineAligned="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblEmpresa"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="right"
            android:text="@string/empresa"
            android:textAlignment="gravity"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ptEmpresa"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="#1A000000"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:baselineAligned="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblTlfProv"
            android:layout_width="13dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="right"
            android:text="@string/phone"
            android:textAlignment="gravity"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ptTlfProv"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="#1A000000"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:baselineAligned="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblEmailProv"
            android:layout_width="13dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="right"
            android:text="@string/email"
            android:textAlignment="gravity"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ptEmailProv"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="#1A000000"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:baselineAligned="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblDeuda"
            android:layout_width="13dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="right"
            android:text="@string/deuda"
            android:textAlignment="gravity"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ptDeuda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:baselineAligned="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblNpedidosProv"
            android:layout_width="13dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="right"
            android:text="@string/npedidos"
            android:textAlignment="gravity"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ptNpedidosProv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAddProv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#75A6F6"
        android:text="@string/add_prov" />

</LinearLayout>