<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFA7FFEB"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/pngegg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user"
            android:textAlignment="textEnd"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="#80FFFFFF"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/password"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pass"
            android:textAlignment="textEnd"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="#80FFFFFF"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/iniciarSesion"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:backgroundTint="#BF000000"
            android:insetLeft="20dp"
            android:insetTop="30dp"
            android:insetRight="20dp"
            android:text="@string/iniciarSesion"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>